<resources>
    <string name="app_name">Ease</string>

    <string name="title_permission">Permissions</string>

    <string name="permission_title">Woah there!</string>
    <string name="permission_message">We need a special permission to continue. Use ADB to run the following command (one line):</string>
    <string name="permission_command">adb shell pm grant com.draco.ease android.permission.WRITE_SECURE_SETTINGS</string>

    <string name="please_wait">Waiting for permission</string>
    <string name="copied">Copied to clipboard</string>

    <string name="snackbar_intent_failed">Could not handle this action</string>
    <string name="snackbar_activated">Gradually adjusting brightness</string>
    <string name="snackbar_cancelled">Service aborted</string>

    <string name="developer_url">https://www.github.com/tytydraco</string>
    <string name="source_url">https://www.github.com/tytydraco/Ease</string>
    <string name="contact_url">mailto:tylernij@gmail.com</string>

    <string name="category_config">Configuration</string>
    <string name="category_about">About</string>

    <string name="pref_activate_title">Activate</string>
    <string name="pref_activate_summary">Start the dimming service</string>
    <string name="pref_activate_key">activate</string>

    <string name="pref_cancel_title">Cancel</string>
    <string name="pref_cancel_summary">Cancel an active dimming service</string>
    <string name="pref_cancel_key">cancel</string>

    <string name="pref_ratio_title">Brightness ratio</string>
    <string name="pref_ratio_summary">Dim brightness to this percentage of the starting value</string>
    <string name="pref_ratio_key">ratio</string>

    <string name="pref_duration_title">Duration</string>
    <string name="pref_duration_summary">Span in minutes during which to dim the screen</string>
    <string name="pref_duration_key">duration</string>

    <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_summary">Tyler Nijmeh</string>
    <string name="pref_developer_key">developer</string>

    <string name="pref_source_title">Source code</string>
    <string name="pref_source_summary">Check out this project on GitHub</string>
    <string name="pref_source_key">source</string>

    <string name="pref_contact_title">Contact</string>
    <string name="pref_contact_summary">Email me with questions, comments, and concerns</string>
    <string name="pref_contact_key">contact</string>

    <string name="pref_licenses_title">Licenses</string>
    <string name="pref_licenses_summary">View the open source licenses</string>
    <string name="pref_licenses_key">licenses</string>
</resources>