<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/category_config">
        <Preference
            android:title="@string/pref_activate_title"
            android:summary="@string/pref_activate_summary"
            android:key="@string/pref_activate_key"
            android:icon="@drawable/ic_baseline_brightness_medium_24" />
        <Preference
            android:title="@string/pref_cancel_title"
            android:summary="@string/pref_cancel_summary"
            android:key="@string/pref_cancel_key"
            android:icon="@drawable/ic_baseline_cancel_24" />
        <SeekBarPreference
            android:title="@string/pref_ratio_title"
            android:summary="@string/pref_ratio_summary"
            android:key="@string/pref_ratio_key"
            android:icon="@drawable/ic_baseline_trending_down_24"
            app:showSeekBarValue="true"
            android:defaultValue="50" />
        <SeekBarPreference
            android:title="@string/pref_duration_title"
            android:summary="@string/pref_duration_summary"
            android:key="@string/pref_duration_key"
            android:icon="@drawable/ic_baseline_timer_24"
            app:showSeekBarValue="true"
            app:min="1"
            android:defaultValue="5"
            android:max="10" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_about">
        <Preference
            android:title="@string/pref_developer_title"
            android:summary="@string/pref_developer_summary"
            android:key="@string/pref_developer_key"
            android:icon="@drawable/ic_baseline_person_pin_24" />
        <Preference
            android:title="@string/pref_source_title"
            android:summary="@string/pref_source_summary"
            android:key="@string/pref_source_key"
            android:icon="@drawable/ic_baseline_code_24" />
        <Preference
            android:title="@string/pref_contact_title"
            android:summary="@string/pref_contact_summary"
            android:key="@string/pref_contact_key"
            android:icon="@drawable/ic_baseline_email_24" />
        <Preference
            android:title="@string/pref_licenses_title"
            android:summary="@string/pref_licenses_summary"
            android:key="@string/pref_licenses_key"
            android:icon="@drawable/ic_baseline_insert_drive_file_24" />
    </PreferenceCategory>
</PreferenceScreen>